--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@
     <!-- 引入main.ts文件 -->
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <%- momentscript %>
+  <%- echartscript %>
 </html>
